feat: almost finish main pages

--- a/src/courses.html
+++ b/src/courses.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="f5ee458c9f947fcbe2bf.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/icon.svg" type="image/x-icon">
     <title>EMentor</title>
-<script defer src="index.js"></script></head>
+</head>
 <body>
     <header class="header header_l">
         <div class="container">
             <div class="header__menu menu">
-                <img src="1dd644fdb07ca1aca4a7.svg" alt="" class="menu__logo">
+                <img src="./img/logotype.svg" alt="" class="menu__logo">
                 <ul class="menu__list">
                     <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
                     <li class="menu__item"><a href="" class="menu__link">Платформа</a></li>
@@ -31,11 +31,11 @@
                 <li class="breadcrumbs__item">
                     Главная
                 </li>
-                <img src="fab3ab23c749b38a9604.svg" alt="arrow" class="breadcrumbs__arrow">
+                <img src="./img/right.svg" alt="arrow" class="breadcrumbs__arrow">
                 <li class="breadcrumbs__item">
                     Курсы
                 </li>
-                <img src="fab3ab23c749b38a9604.svg" alt="arrow" class="breadcrumbs__arrow">
+                <img src="./img/right.svg" alt="arrow" class="breadcrumbs__arrow">
                 <li class="breadcrumbs__current">
                     Motion design
                 </li>
@@ -50,7 +50,7 @@
                     Практический курс по анимации
                     для начинающих motion-дизайнеров
                 </h1>
-                <img src="c0013631020620079cb4.jpg" alt="" class="practic__img">
+                <img src="./img/main/primitive-objects.jpg" alt="" class="practic__img">
                 <div class="practic__content">
                     <h1 class="practic__sub-header">
                         Мечтаете оживлять статичные картинки и интерфейсы? Тогда этот курс для вас!
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="shablon__img img-card img-card_l">
-                    <img src="f4f138c106221ad790ed.jpg" alt="work_people">
+                    <img src="./img/section-blocks/section1.jpg" alt="work_people">
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
                 <ul class="courses__list">
                     <li class="courses__item">
                         <h1 class="courses__article-container">
-                            <img src="ec7311cb182b08fb1795.svg" alt="" class="courses__img">
+                            <img src="./img/skills/skills1.svg" alt="" class="courses__img">
                             <span class="courses__name">Анимировать объекты</span>
                         </h1>
                         
@@ -153,7 +153,7 @@
                     </li>
                     <li class="courses__item">
                         <h1 class="courses__article-container">
-                            <img src="f75649b68c1e840db5a2.svg" alt="" class="courses__img">
+                            <img src="./img/skills/skills2.svg" alt="" class="courses__img">
                             <span class="courses__name">Работать с кадром</span>
                         </h1>
                         <p class="courses__article">
@@ -162,7 +162,7 @@
                     </li>
                     <li class="courses__item">
                         <h1 class="courses__article-container">
-                            <img src="8f16be6db2b2834f283a.svg" alt="" class="courses__img">
+                            <img src="./img/skills/skills3.svg" alt="" class="courses__img">
                             <span class="courses__name">Работать в After Effects</span>
                         </h1>
                         <p class="courses__article">
@@ -171,7 +171,7 @@
                     </li>
                     <li class="courses__item">
                         <h1 class="courses__article-container">
-                            <img src="c4b83ceb3c99aad24b46.svg" alt="" class="courses__img">
+                            <img src="./img/skills/skills4.svg" alt="" class="courses__img">
                             <span class="courses__name">Работать со звуком</span>
                         </h1>   
                         <p class="courses__article">
@@ -218,7 +218,7 @@
                             <h1 class="questions__article-header">
                                 Я никогда не занимался анимацией. У меня получится?
                             </h1>
-                            <img src="7a0b1b0e75419085d823.svg" alt="" class="questions__img">
+                            <img src="./img/close.svg" alt="" class="questions__img">
                         </div>
                         <p class="questions__description active">
                             Конечно! Этот курс рассчитан для новичков, для тех, кто еще совсем ничего не умеет. Курс интенсивный, но оно того стоит. Главное выполняйте домашнее задание в срок. Вам всегда будут помогать тренеры и кураторы. Все получится!
@@ -229,7 +229,7 @@
                             <h1 class="questions__article-header">
                                 Насколько курс интенсивный? Я смогу совмещать с работой?
                             </h1>
-                            <img src="7a0b1b0e75419085d823.svg" alt="" class="questions__img">
+                            <img src="./img/close.svg" alt="" class="questions__img">
                         </div>
                         <p class="questions__description active">
                             Курс довольно интенсивный, но, при большом желании, вы будете успевать все. Вам понадобится 2-3 свободных часа в день на изучение материала и выполнение домашних заданий.
@@ -240,7 +240,7 @@
                             <h1 class="questions__article-header">
                                 Какие программы мне нужны для обучения?
                             </h1>
-                            <img src="8a378a3d7a7321f14970.svg" alt="" class="questions__img">
+                            <img src="./img/open.svg" alt="" class="questions__img">
                         </div>
                         <p class="questions__description">
 
@@ -251,7 +251,7 @@
                             <h1 class="questions__article-header">
                                 Есть ли рассрочка или дополнительные скидки?
                             </h1>
-                            <img src="8a378a3d7a7321f14970.svg" alt="" class="questions__img">
+                            <img src="./img/open.svg" alt="" class="questions__img">
                         </div>
                         <p class="questions__description">
 
@@ -262,7 +262,7 @@
                             <h1 class="questions__article-header">
                                 Вы помогаете с трудоустройством?
                             </h1>
-                            <img src="8a378a3d7a7321f14970.svg" alt="" class="questions__img">
+                            <img src="./img/open.svg" alt="" class="questions__img">
                         </div>
                         <p class="questions__description">
 
@@ -272,5 +272,104 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__container">
+                <div class="footer__main">
+                    <img src="./img/logotype.svg" alt="" class="footer__logo">
+                    <div class="footer__decription">
+                        Образовательная онлайн-платформа для развития и тренировки навыков
+                        в сфере информационных технологий
+                    </div>
+                    <ul class="start-page__socials socials_row">
+                        <li><a href="" class="start-page__link"><img src="./img/socials/facebook.svg" alt="facebook"></a></li>
+                        <li><a href="" class="start-page__link"><img src="./img/socials/vk.svg" alt="vk"></a></li>
+                        <li><a href="" class="start-page__link"><img src="./img/socials/insta.svg" alt="instagram"></a></li>
+                    </ul>
+                </div>
+                <ul class="footer__list">
+                    <h1 class="footer__header">
+                        Обучение
+                    </h1>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Курсы</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Вебинары</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Тренажеры</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Воркшопы</a>
+                    </li>
+                </ul>
+                <ul class="footer__list">
+                    <h1 class="footer__header">
+                        О нас
+                    </h1>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">О платформе</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Преподаватели</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Тарифы</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Отзывы</a>
+                    </li>
+                </ul>
+                <ul class="footer__list">
+                    <h1 class="footer__header">
+                        Контакты
+                    </h1>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Связаться с нами</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Консультация</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Реквизиты</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Поддержка</a>
+                    </li>
+                </ul>
+                <ul class="footer__list">
+                    <h1 class="footer__header">
+                        Возникли вопросы?
+                    </h1>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Напишите нам на почту
+                            <span class="footer__mail">education@ementor.info</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
+    <footer class="under-footer">
+        <div class="container">
+            <div class="under-footer__container">
+                <p class="under-footer__item">
+                    E-Mentor © 2021 Все права защищены
+                </p>
+
+                <div class="under-footer__politics">
+                    <p class="under-footer__item">
+                        Политика обработки персональных данных
+                    </p>
+
+                    <p class="under-footer__item">
+                        Публичная оферта
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
