feat: finish adaptive version (almost ^^ )

--- a/src/index.html
+++ b/src/index.html
@@ -153,13 +153,13 @@
                             </p>
                         </li>
                         <li class="teachers__item">
-                            <img src="./img/teachers/teacher5.jpg" alt="teacher" class="teachers__img r-b">
+                            <img src="./img/teachers/teacher5.jpg" alt="teacher" class="teachers__img c">
                             <p class="teachers__description">
                                 Саша, главный редактор Just Journal
                             </p>
                         </li>
                         <li class="teachers__item">
-                            <img src="./img/teachers/teacher6.jpg" alt="teacher" class="teachers__img">
+                            <img src="./img/teachers/teacher6.jpg" alt="teacher" class="teachers__img r-b">
                             <p class="teachers__description">
                                 Лёня, ведущий разработчик Ymail
                             </p>
