--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                             <ul class="menu__list">
                                 <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">Платформа</a></li>
-                                <li class="menu__item"><a href="" class="menu__link">Курсы</a></li>
+                                <li class="menu__item"><a href="./courses.html" class="menu__link">Курсы</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">Лекции</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">Тарифы</a></li>
                                 <li class="menu__item"><a href="" class="menu__link">Блог</a></li>
