--- a/src/courses.html
+++ b/src/courses.html
@@ -14,7 +14,7 @@
                 <img src="./img/logotype.svg" alt="" class="menu__logo">
                 <ul class="menu__list">
                     <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-                    <li class="menu__item"><a href="" class="menu__link">Платформа</a></li>
+                    <li class="menu__item"><a href="./index.html" class="menu__link">Платформа</a></li>
                     <li class="menu__item"><a href="" class="menu__link">Курсы</a></li>
                     <li class="menu__item"><a href="" class="menu__link">Лекции</a></li>
                     <li class="menu__item"><a href="" class="menu__link">Тарифы</a></li>
