feat: fix margins and paddings

--- a/src/courses.html
+++ b/src/courses.html
@@ -8,6 +8,9 @@
     <title>EMentor</title>
 </head>
 <body>
+    <main class="page">
+
+    
     <header class="header header_l">
         <div class="container">
             <div class="header__menu menu">
@@ -372,5 +375,6 @@
             </div>
         </div>
     </footer>
+</main>
 </body>
 </html>
