feat: add smoothing to questions block

--- a/src/courses.html
+++ b/src/courses.html
@@ -224,7 +224,7 @@
                             </h1>
                             <img src="./img/close.svg" alt="" class="questions__img">
                         </div>
-                        <p class="questions__description active">
+                        <p class="questions__description">
                             Конечно! Этот курс рассчитан для новичков, для тех, кто еще совсем ничего не умеет. Курс интенсивный, но оно того стоит. Главное выполняйте домашнее задание в срок. Вам всегда будут помогать тренеры и кураторы. Все получится!
                         </p>
                     </li>
